Remove first link and change css for start page Related to: ADWD-2568

--- a/app/templates/start.hbs
+++ b/app/templates/start.hbs
@@ -11,29 +11,35 @@
 
 <main class="content" id="content">
 
-  <div class="content_start">
+  <div class="start">
 
-    <h2><a href="{{firstLetterID}}">Briefportal Leibniz. Ausgewählte Briefe in HTML</a></h2>
-    In Kooperation der Göttinger Akademie mit der SUB Göttingen wurde im Rahmen eines Pilotprojektes im Herbst
-    2016 ein Briefportal zur Leibniz-Korrespondenz online aufgeschaltet. Das Portal soll ausgewählte Briefwechsel der
-    Leibniz-Korrespondenz im Zusammenhang und ohne die chronologischen Einschnitte durch die Bandgrenzen der
-    Akademie-Ausgabe in einer
-    komfortablen und volltextdurchsuchbaren html-Version zugänglich machen. Die verschiedenen Textzeugen eines Briefes
-    sind
-    dabei einzeln anwähl- und darstellbar, wodurch eine flexible, elegante Durchsicht des Variantenapparates der
-    Akademie-Ausgabe ermöglicht wird. Zudem sind die bibliographischen Grunddaten zur Briefüberlieferung aufrufbar. Ferner
-    führt ein Link
-    („Zitiervorschlag anzeigen“) direkt zur zitierfähigen Vollfassung des Briefes mit Erläuterungen in der
-    historisch-kritischen
-    Edition der Akademie-Ausgabe (im PDF-Format).
+    <h2>Briefportal Leibniz. Ausgewählte Briefe in HTML</h2>
+    <p>
+      In Kooperation der Göttinger Akademie mit der SUB Göttingen wurde im Rahmen eines Pilotprojektes im Herbst
+      2016 ein Briefportal zur Leibniz-Korrespondenz online aufgeschaltet. Das Portal soll ausgewählte Briefwechsel der
+      Leibniz-Korrespondenz im Zusammenhang und ohne die chronologischen Einschnitte durch die Bandgrenzen der
+      Akademie-Ausgabe in einer
+      komfortablen und volltextdurchsuchbaren html-Version zugänglich machen. Die verschiedenen Textzeugen eines Briefes
+      sind
+      dabei einzeln anwähl- und darstellbar, wodurch eine flexible, elegante Durchsicht des Variantenapparates der
+      Akademie-Ausgabe ermöglicht wird. Zudem sind die bibliographischen Grunddaten zur Briefüberlieferung aufrufbar.
+      Ferner
+      führt ein Link
+      („Zitiervorschlag anzeigen“) direkt zur zitierfähigen Vollfassung des Briefes mit Erläuterungen in der
+      historisch-kritischen
+      Edition der Akademie-Ausgabe (im PDF-Format).
+    </p>
 
-    <h2><a href="{{firstLetterID}}">Leibniz-Korrespondenz mit Johann Bernoulli</a></h2>
-    Derzeit sind im Briefportal Leibniz 150 Briefe der Leibniz-Korrespondenz mit dem Basler Mathematiker Johann
-    Bernoulli (1667-1748) zugänglich. Die Briefe sind historisch-kritisch editiert in der Reihe III (mathematischer,
-    naturwissenschaftlicher und technischer Briefwechsel) der Leibniz-Akademie-Ausgabe, Bd. 5 bis 8, und umfassen den
-    Zeitraum vom 30.
-    Dezember 1693 bis zum 27. Dezember 1701.
-
+    <h2>
+      <a href="{{firstLetterID}}">Leibniz-Korrespondenz mit Johann Bernoulli</a>
+    </h2>
+    <p>
+      Derzeit sind im Briefportal Leibniz 150 Briefe der Leibniz-Korrespondenz mit dem Basler Mathematiker Johann
+      Bernoulli (1667-1748) zugänglich. Die Briefe sind historisch-kritisch editiert in der Reihe III (mathematischer,
+      naturwissenschaftlicher und technischer Briefwechsel) der Leibniz-Akademie-Ausgabe, Bd. 5 bis 8, und umfassen den
+      Zeitraum vom 30.
+      Dezember 1693 bis zum 27. Dezember 1701.
+    </p>
   </div>
 
 </main>
