--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -42,6 +42,7 @@
 @import 'blocks/lane-type';
 @import 'blocks/search';
 @import 'blocks/sidebar';
+@import 'blocks/start';
 @import 'blocks/symbol';
 @import 'blocks/top-bar';
 @import 'blocks/transcript';
