Add start page Related to ADWD-2568

--- a/app/templates/start.hbs
+++ b/app/templates/start.hbs
@@ -31,7 +31,7 @@
     </p>
 
     <h2>
-      <a href="{{firstLetterID}}">Leibniz-Korrespondenz mit Johann Bernoulli</a>
+      {{#link-to 'letter' 'l35202'}}Leibniz-Korrespondenz mit Johann Bernoulli{{/link-to}}
     </h2>
     <p>
       Derzeit sind im Briefportal Leibniz 150 Briefe der Leibniz-Korrespondenz mit dem Basler Mathematiker Johann
